# ffbinaries-api-client

./: .editorconfig  .gitignore  README.md  pyproject.toml  setup.py
examples/: examples.py
ffbinaries/: __init__.py  api.py  cache.py  const.py  errors.py  exceptions.py  utils.py
src/ffbinaries/: __init__.py  api.py  client.py  enums.py  exceptions.py  utils.py
src/ffbinaries/schemas/: version.py
tests/: jsons.py  test_api.py
