[project]
name = "ffbinaries-api-client"
version = "0.0.20"
description = "FFbinaries API Client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]
keywords = ["ffbinaries", "ffmpeg", "ffprobe", "ffplay", "ffserver", "ffbinaries-api-client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/tropicoo/ffbinaries-api-client.git"
Issues = "https://github.com/tropicoo/ffbinaries-api-client/issues"

[dependency-groups]
lint = [
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
required-version = ">=0.9"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "B008",
    "BLE001",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D401",
    "E501",
    "FBT001",
    "FBT002",
    "PLR0913",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
line-ending = "lf"
docstring-code-format = true
