[project]
name = "ffbinaries-api-client"
version = "0.0.21"
description = "FFbinaries API Client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]
keywords = ["ffbinaries", "ffmpeg", "ffprobe", "ffplay", "ffserver", "ffbinaries-api-client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/tropicoo/ffbinaries-api-client.git"
Issues = "https://github.com/tropicoo/ffbinaries-api-client/issues"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "ty>=0.0.1a19",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
required-version = ">=0.9"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "B008",
    "BLE001",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D401",
    "E501",
    "FBT001",
    "FBT002",
    "PLR0913",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
line-ending = "lf"
docstring-code-format = true


[tool.pylint]
disable = ["all"]
enable = [
    "cyclic-import",  # Detect cyclic imports
    "deprecated-module",         # Detect usage of deprecated modules
    "import-error",  # Detect missing imports
    "import-self",               # Detect when a module imports itself
    "misplaced-future",          # Detect misplaced __future__ imports
    "no-member",  # Detect undefined attributes in modules/classes
    "no-name-in-module",  # Detect invalid module attributes
    "preferred-module",          # Enforce preferred module usage
    "reimported",                # Detect when a module is reimported
    "relative-beyond-top-level", # Detect relative imports beyond top level
    "ungrouped-imports",         # Detect ungrouped imports
    "unused-import",  # Detect unused imports
    "wildcard-import",           # Detect wildcard imports
    "wrong-import-order",        # Detect incorrect import order
    "wrong-import-position",     # Detect imports not at the top of the file
]
ignore-paths = ["venv/", "build/", "dist/", ".venv/"]
